--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,7 @@
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="{{ "/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js" | prepend: site.baseurl }}"></script>
 </head>
