--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,6 @@
+---
+layout: home
+---
 <!DOCTYPE html>
 <html>
 
@@ -8,7 +11,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p>This is a template for a simplke mareting or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
       </div>
     </div>
