--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,19 @@
 ---
-layout: default
+layout: page
 ---
-<div class="post">
+<!DOCTYPE html>
+<html>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+  {% include head.html %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+  <body>
+    {% include header.html %}
+    <div class="container">
+        {{ content }}
+    </div>
 
-</div>
+    {% include footer.html %}
+
+  </body>
+
+</html>
