styling the homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,6 +8,14 @@ layout: home
 
   <body>
     {% include header.html %}
+    <div class="intro">
+      <div class="filter">
+        <div class="container vertical-shift">
+          <div class="hide-text  big-logo">Next Door Pet Sitters</div>
+          <div class="slogan"><p class="text-muted">Professional pet sitting and dog walking services tailored to your pet's needs!</p></div>
+        </div>
+      </div>
+    </div>
     <div class="jumbotron">
       <div class="container">
         <h1>Hello, world!</h1>
