--- a/css/main.scss
+++ b/css/main.scss
@@ -20,14 +20,15 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-  "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables",
+  "../bower_components/bourbon/dist/bourbon",
+  "variables",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins",
+  "mixins",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/normalize",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/print",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/glyphicons",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/scaffolding",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/type",
-  "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/code",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/grid",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/tables",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/forms",
@@ -51,14 +52,13 @@
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/list-group",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/panels",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/responsive-embed",
-  "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/wells",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/close",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/modals",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/tooltip",
-  "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/popovers",
-  "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/carousel",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/utilities",
-  "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/responsive-utilities"
+  "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/responsive-utilities",
+  "base",
+  "intro"
 ;
 body {
   padding-top: 50px;
