--- a/_includes/fancy_title.html
+++ b/_includes/fancy_title.html
@@ -1,7 +1,6 @@
-<div class="jumbotron fancy_title">
+<header class="jumbotron fancy_title">
   <div class="container">
-    <h1>Hello, world!</h1>
-    <p>This is a template for a simplke mareting or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+    <h1>{{ site.title }} <small>{{ page.title }}</small></h1>
+    <p>{{ page.description }}</p>
   </div>
-</div>
+</header>
