--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -1,11 +1,11 @@
 .intro{
   height: 50%;
   text-align: center;
-  background-image: url('/img/dog-hero.jpg');
+  // background-image: url('/img/dog-hero.jpg');
   background-size: cover;
   background-position: center;
   .filter{
-    background: rgba(0, 0, 0, .1);
+    // background: rgba(0, 0, 0, .1);
     height: 100%;
   }
   .container{
