--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -5,7 +5,7 @@
   background-size: cover;
   background-position: center;
   .filter{
-    // background: rgba(0, 0, 0, .1);
+    background: #e2f2f9;
     height: 100%;
   }
   .container{
@@ -29,6 +29,6 @@
   padding: 10px;
   font-style: italic;
   p{
-    color: #fff;
+    // color: #fff;
   }
 }
