--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -2,10 +2,10 @@
   height: 50%;
   text-align: center;
   background-image: url('/img/dog-hero.jpg');
-  // background-size: cover;
+  background-size: 100%;
   background-position: center 10%;
   .filter{
-    background: rgba(#e2f2f9, .7);
+    background: rgba(#e2f2f9, .8);
     height: 100%;
   }
   .container{
