restructure the intro

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,9 +12,11 @@ layout: home
       <div class="filter">
         <div class="container vertical-shift">
           <div class="hide-text  big-logo">Next Door Pet Sitters</div>
-          <div class="slogan"><p class="text-muted">Professional pet sitting and dog walking services tailored to your pet's needs!</p></div>
         </div>
       </div>
+    </div>
+    <div class="slogan">
+      <p class="text-muted">Professional pet sitting and dog walking services in St. Paul, Minnesota</p>
     </div>
     <div class="jumbotron">
       <div class="container">
