--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -9,7 +9,6 @@
     height: 100%;
   }
   .container{
-    // background: rgba(#fff, .73);
     height: 60%;
     width: 100%;
     padding: 2% 0;
@@ -21,12 +20,9 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center center;
-  // width: 75%;
   width: 50%;
   height: 90%;
   margin: 0 0 0 10%;
-  // left: 50%;
-  // position: relative;
   @include media($whale){
   }
 }
@@ -34,8 +30,10 @@
   font-style: italic;
   font-size: 16px;
   padding: 20px 0;
+  background: $brand-primary;
   p{
     text-align: center;
     margin: 0;
+    color: #fff;
   }
 }
