master cool logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Next Door Pet Sitters</a>
+        <a class="navbar-brand hide-text" href="/">Next Door Pet Sitters</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
