--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,15 +18,13 @@ layout: home
     <div class="slogan">
       <p class="text-muted">Professional pet sitting and dog walking services in St. Paul, Minnesota</p>
     </div>
-    <div class="jumbotron">
+    <div class="why">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simplke mareting or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+        {{ content }}
       </div>
     </div>
     <div class="container">
-        {{ content }}
+
     </div>
 
     {% include footer.html %}
