--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,6 +20,7 @@ $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
 $brand-primary:         #4ac9f4 !default;
+$brand-secondary:       #F4945B !default;
 $brand-success:         #5cb85c !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
@@ -33,7 +34,7 @@ $brand-danger:          #d9534f !default;
 //** Background color for `<body>`.
 $body-bg:               #fff !default;
 //** Global text color on `<body>`.
-$text-color:            $gray-dark !default;
+$text-color:            #565656 !default;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
