--- a/css/main.scss
+++ b/css/main.scss
@@ -58,7 +58,9 @@
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/utilities",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/responsive-utilities",
   "base",
-  "intro"
+  "intro",
+  "why",
+  "header"
 ;
 body {
   padding-top: 50px;
