--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,10 +6,18 @@ layout: page
 
   {% include head.html %}
 
-  <body>
+  <body class="blog">
     {% include header.html %}
+    {% include fancy_title.html %}
     <div class="container">
-        {{ content }}
+        <div class="row">
+          <div class="col-lg-8">
+            {{ content }}
+          </div>
+          <div class="col-lg-4">
+
+          </div>
+        </div>
     </div>
 
     {% include footer.html %}
