--- a/css/main.scss
+++ b/css/main.scss
@@ -60,7 +60,11 @@
   "base",
   "intro",
   "why",
-  "header"
+  "header",
+  "footer",
+  "fancy_title",
+  "services",
+  "contact_info"
 ;
 body {
   padding-top: 50px;
