--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
 <footer class="container site-footer">
-copyright 2014 Next Door Pet Sitters
+  <div class="pull-left">
+    <img src="/img/napps.jpg" alt="National Association of Professional Pet Sitters">
+    <img src="/img/BI-logo.png" alt="Business Insurers of the Carolinas">
+  </div>
+  <div class="pull-right">copyright 2014 Next Door Pet Sitters</div>
 </footer>
