--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,27 @@
 ---
 layout: post
 ---
-<div class="post">
+<!DOCTYPE html>
+<html>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+  {% include head.html %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+  <body class="post">
+    {% include header.html %}
+    {% include fancy_title.html %}
+    <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            {{ content }}
+          </div>
+          <div class="col-lg-4">
+            {% include contact_info.html %}
+          </div>
+        </div>
+    </div>
 
-</div>
+    {% include footer.html %}
+
+  </body>
+
+</html>
