get rid of big logo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,12 @@ layout: home
     <div class="intro">
       <div class="filter">
         <div class="container vertical-shift">
-          <div class="hide-text  big-logo">Next Door Pet Sitters</div>
+          <div class="converter">
+            <h1>Welcome!</h1>
+            <p>We're ready to take care of your animals! <a href="mailto:pam@nextdoorpetsitters.com" target="_blank">Send us an email</a> Or click the button below to request a sitter</p>
+            <script id="setmore_script" type="text/javascript" src="https://my.setmore.com/js/iframe/setmore_iframe.js"></script>
+<a class="btn btn-primary btn-lg pull-right" href="https://my.setmore.com/shortBookingPage/62b7d367-14dd-4d47-b93d-efa8b0e63d10">Request a sitter Today!</a>
+          </div>
         </div>
       </div>
     </div>
