--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -1,10 +1,10 @@
 .intro{
   height: 70%;
-  text-align: center;
   background-image: url('/img/dog_hero.jpg');
   background-size: cover;
   background-position: 0;
   background-repeat: no-repeat;
+  color: #fff;
   .filter{
     height: 100%;
   }
@@ -13,7 +13,10 @@
     padding: 2% 0;
   }
 }
-
+.converter{
+  max-width:500px;
+  margin-left: 5%;
+}
 .big-logo{
   background-image: url('/img/Next_Door_logo.svg');
   background-repeat: no-repeat;
