--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -4,7 +4,6 @@
   background-size: cover;
   background-position: 0;
   background-repeat: no-repeat;
-  color: #fff;
   .filter{
     height: 100%;
   }
@@ -14,8 +13,15 @@
   }
 }
 .converter{
-  max-width:500px;
-  margin-left: 5%;
+  @include clearfix;
+  max-width: 500px;
+  margin: 0 5%;
+  background: rgba(255, 255, 255, .7);
+  border-radius: 10px;
+  padding: 20px 20px 30px;
+  p{
+    margin-bottom: 30px;
+  }
 }
 .big-logo{
   background-image: url('/img/Next_Door_logo.svg');
