add slick and lightbox

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,6 +28,11 @@ layout: home
         {{ content }}
       </div>
     </div>
+    <div class="clients-bar">
+      <div class="container">
+        {% include client_bar.html %}
+      </div>
+    </div>
     {% include footer.html %}
 
   </body>
