--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,3 +5,8 @@
   </div>
   <div class="pull-right">copyright 2014 Next Door Pet Sitters</div>
 </footer>
+
+<script src="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>
+
+<script src="/bower_components/lightbox2/js/lightbox.min.js"></script>
+<script src="/js/app.js"></script>
