--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@
 @import
   "../bower_components/bourbon/dist/bourbon",
   "variables",
+  "slick",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins",
   "mixins",
   "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/normalize",
@@ -64,7 +65,8 @@
   "footer",
   "fancy_title",
   "services",
-  "contact_info"
+  "contact_info",
+  "clients-bar"
 ;
 body {
   padding-top: 50px;
